--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "basic-wallet",
     "local-wallet",
-    "my-plugin"
+    "ching-plugin"
   ],
   "npmClient": "yarn",
   "useWorkspaces": true,
