--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sample-burner-wallet-plugin",
-  "description": "Sample repo for building a Burner Wallet 2 plugin",
+  "name": "ching-plugin",
+  "description": "Allows burner wallet to transact with Ching Point of Sale",
   "author": "David Mihal <david@dmihal.com>",
   "license": "MIT",
   "private": true,
@@ -14,7 +14,7 @@
   "workspaces": [
     "basic-wallet",
     "local-wallet",
-    "my-plugin"
+    "ching-plugin"
   ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.5.0",
