--- a/ching-plugin/package.json
+++ b/ching-plugin/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@burner-wallet/assets": "^1.0.0",
     "@burner-wallet/types": "^1.0.0",
-    "@types/react": "*"
+    "@types/react": "*",
+    "axios":"^0.19.2"
   },
   "devDependencies": {
     "typescript": "^3.5.2"
