--- a/basic-wallet/package.json
+++ b/basic-wallet/package.json
@@ -22,7 +22,8 @@
     "start-basic": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "gh-deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
