--- a/basic-wallet/package.json
+++ b/basic-wallet/package.json
@@ -22,8 +22,7 @@
     "start-basic": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "gh-deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "browserslist": {
     "production": [
