--- a/ching-plugin/package.json
+++ b/ching-plugin/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "main": "dist/ChingPlugin.js",
   "types": "dist/ChingPlugin.d.ts",
+  "proxy": "https://us-central1-daipos.cloudfunctions.net",
   "scripts": {
     "build": "tsc",
     "start-basic": "tsc -w",
@@ -15,7 +16,8 @@
     "@burner-wallet/assets": "^1.0.0",
     "@burner-wallet/types": "^1.0.0",
     "@types/react": "*",
-    "axios":"^0.19.2"
+    "axios": "^0.19.2",
+    "http-proxy-middleware": "^0.20.0"
   },
   "devDependencies": {
     "typescript": "^3.5.2"
